# astroberry-manager

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  astroberry-manager.service  dependencies.sh  dependencies.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-release.yml
astroberry-manager/: almanac.py  equipment.py  location.py  main.py  system.py  weather.py
astroberry-manager/assets/css/: style.css
astroberry-manager/assets/js/: app.js
astroberry-manager/assets/js/app/: almanac.js  celestial.config.js  celestial.js  desktop.js  equipment.js  functions.js  helpers.js  indiserver.js  location.js  moon.js  search.js  sockets.js  system.js  terminal.js  weather.js
astroberry-manager/assets/js/misc/: particles.json
astroberry-manager/templates/: index.html  login.html
astroberry_manager/: almanac.py  equipment.py  location.py  main.py  system.py  time.py  weather.py
astroberry_manager/assets/css/: style.css
astroberry_manager/assets/js/: app.js
astroberry_manager/assets/js/app/: almanac.js  celestial.config.js  celestial.js  desktop.js  equipment.js  functions.js  helpers.js  indiserver.js  location.js  moon.js  search.js  sockets.js  system.js  terminal.js  time.js  weather.js
astroberry_manager/assets/js/d3-celestial/: celestial.js
astroberry_manager/assets/js/xterm/: xterm-addon-fit.js  xterm-addon-search.js  xterm-addon-web-links.js
astroberry_manager/templates/: index.html  login.html  welcome.html
astroberrymanager/: equipment.py  location.py  main.py  system.py  weather.py
astroberrymanager/assets/css/: style.css
astroberrymanager/assets/js/: app.js
astroberrymanager/assets/js/app/: almanac.js  celestial.config.js  celestial.js  desktop.js  equipment.js  helpers.js  indiserver.js  location.js  search.js  sockets.js  system.js  terminal.js  weather.js
astroberrymanager/assets/js/d3-celestial/: celestial.js
astroberrymanager/templates/: index.html
debian/: astroberry-manager.service  changelog  control  copyright  postinst  postrm  rules  vncserver.service
files/: Caddyfile  indiwebmanager.service  websockify.service
