[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["astroberrymanager"]
include-package-data = true

[project]
name = "astroberrymanager"
version = "1.0.0" # Also update __version__ in main.py
authors = [
  { name="Radek Kaczorek", email="rkaczorek@gmail.com" }
]
description = "Web frontend for Astroberry OS"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3"}
classifiers = [
    'License :: OSI Approved :: License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python',
    'Operating System :: OS Independent',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Astronomy',
]
dependencies = [
    "Flask>=2.0.1",
    "Flask-SocketIO>=5.1.1",
    "Flask-Cors>=5.0.0",
    "flask-login>=0.6.3",
    "python-pam>=2.0.2",
    "gevent>=24.2.1",
    "gevent-websocket>=0.10.1",
    "ephem>=4.1.5",
    "numpy>=2.1.1",
    "pillow>=10.4.0",
    "importlib-metadata>=8.5.0",
    "yr-weather>=0.4.0",
    "pygobject>=3.50.0",
    "gpsdclient>=1.3.2",
    "astroquery>=0.4.7",
    "websockify>=0.12.0",
    "indiweb>=0.2",
    "pyindi-client>=1.9.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
astroberry-manager = "astroberrymanager.main:main"

[project.urls]
"Homepage" = "https://www.astroberry.io/"
