[metadata]
name=astroberry-manager
version=1.0.0
url=https://github.com/rkaczorek/astroberry-manager
description=Web frontend for Astroberry OS
long_description=file:README.md
author=Radek Kaczorek
author_email=rkaczorek@gmail.com
license=GPL-3
classifiers=
   License :: OSI Approved :: License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Natural Language :: English
   Programming Language :: Python
   Operating System :: OS Independent
   Intended Audience :: Science/Research
   Topic :: Scientific/Engineering :: GIS

[options]
packages = astroberry-manager
python_requires=>=3.8,<4
install_requires=
	Flask>=2.0.1
	Flask-SocketIO>=5.1.1
	flask-login>=0.6.3
	python-pam>=2.0.2
	gevent>=24.2.1
	gevent-websocket>=0.10.1
	ephem>=4.1.5
	numpy>=2.1.1
	pillow>=10.4.0
	importlib-metadata>=8.5.0
	yr-weather>=0.4.0
	pygobject>=3.50.0
	gpsdclient>=1.3.2
	astroquery>=0.4.7
	websockify>=0.12.0
	indiweb>=0.1.8
	pyindi-client>=1.9.1

[options.entry_points]
console_scripts = ["astroberry-manager = astroberry-manager.main:main"]
